# 2D-Fluid-Simulation

./: .gitignore  LICENSE  README.md  readme.md
.claude/: role_prompt.md
.claude/memory/: MEMORY.md  feedback_check_local_claude_dir.md  feedback_commit_style.md  feedback_local_memory.md  known_issues.md  project_overview.md  project_structure.md
rust/: Cargo.toml
rust/src/: lib.rs  main.rs  optimization.rs  physics.rs  simulation.rs  sph.rs  testing.rs  types.rs  visualization.rs
tools/: grid_viz.html
