[package]
name = "simulation_project"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

piston = "1.0.0"
piston2d-graphics = "0.45.0"
pistoncore-glutin_window = "0.72.0"
piston2d-opengl_graphics = "0.89.0"
piston_window = "0.126.0"
image = "0.24"
rand = "0.9.2"
rayon = "1.5.3"