[package]
name = "simulation_project"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["native"]
native = ["piston", "piston2d-graphics", "pistoncore-glutin_window", "piston2d-opengl_graphics", "piston_window", "image"]

[dependencies]
wasm-bindgen = "0.2"
rand = "0.9.2"
rayon = "1.5.3"

piston = { version = "1.0.0", optional = true }
piston2d-graphics = { version = "0.45.0", optional = true }
pistoncore-glutin_window = { version = "0.72.0", optional = true }
piston2d-opengl_graphics = { version = "0.89.0", optional = true }
piston_window = { version = "0.126.0", optional = true }
image = { version = "0.24", optional = true }